...
    <string name="task_info">Task Info</string>
    <string name="submit">Submit</string>
    <string name="submitted">Submitted!</string>
    <string name="placeholder">Placeholder</string>
    <string name="task_master">Task Master</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab aliquid aut consequuntur corporis cupiditate dicta dolor eaque eligendi est et eveniet facere, laboriosam, minima neque obcaecati officiis pariatur rerum similique sint sit tempora temporibus ullam. Blanditiis cum excepturi, facere laboriosam laudantium magnam qui reiciendis, rerum sapiente sint temporibus tenetu
    <string name="settings">Settings</string>
    <string name="username">Username:</string>
    <string name="save">Save</string>
    <string name="enter_username_here">Enter Username Here</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="textview">TextView</string>
    <string name="select_state">Select task state</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
...
