...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SettingsUsernameLabel" />

    <Button
        android:id="@+id/SettingsSaveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="152dp"
        android:layout_marginTop="295dp"
        android:layout_marginEnd="153dp"
        android:layout_marginBottom="60dp"
...
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SettingsUsernameEditText" />

    <Spinner
        android:id="@+id/SettingsActivitySelectTeamDropdown"
        android:layout_width="383dp"
        android:layout_height="34dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
...
