...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.084"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/HomeNameTextView" />

    <ImageButton
        android:id="@+id/HomeActivitySettingsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="128dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/settings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/HomeLabel"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="?android:attr/listChoiceIndicatorSingle" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/HomeActivityTaskRecyclerView"
        android:layout_width="350dp"
        android:layout_height="511dp"
        android:layout_marginStart="39dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="29dp"
        android:minHeight="500dp"
...
